force-app/main/default/objects/Apttus_Approval__ReminderInstance__c/Apttus_Approval__ReminderInstance__c.object-meta.xml
<CustomObject>
    <description>Specifies runtime information for process step and subprocess reminders.</description>
    <label>Reminder Instance</label>
    <nameField>
        <displayFormat>REMI-{000000}</displayFormat>
        <label>Reminder Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>