force-app/main/default/objects/Apttus_Approval__ReminderInstance__c/fields/Apttus_Approval__ApprovalRequestId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalRequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Request Id</label>
    <referenceTo>Apttus_Approval__Approval_Request__c</referenceTo>
    <relationshipLabel>Reminder Instances</relationshipLabel>
    <relationshipName>Reminder_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>