force-app/main/default/objects/Apttus_Approval__ReminderInstance__c/fields/Apttus_Approval__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>