force-app/main/default/objects/Apttus_Approval__ReminderInstance__c/fields/Apttus_Approval__ScheduledFireTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ScheduledFireTime__c</fullName>
    <label>Scheduled Fire Time</label>
    <type>DateTime</type>
</CustomField>